Fixed popup calendar overlap

--- a/src/content/Calendar/Calendar.css
+++ b/src/content/Calendar/Calendar.css
@@ -33,7 +33,7 @@
     border: 1px solid #ddd;
     text-align: center;
     font-weight: bold;
-    z-index: 99;
+    z-index: 10;
   }
   
   .calendar  .body-column {
