--- a/src/content/SectionPopup/SectionPopup.css
+++ b/src/content/SectionPopup/SectionPopup.css
@@ -12,7 +12,7 @@
     top: 20%;
     left: 50%;
     transform: translate(-50%, -50%);
-    z-index: 10;
+    z-index: 20;
 
     display: flex;
     justify-content: space-between;
